Fixed logo getting styled by wrong css class, SideBar bug hardcode fix
The sideBar had an issue on some pages where it would get smaller when the elements inside  the closest <div> were a bit too large. Fixed it by hardCoding a min-width on sideBar as no other solution was found

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,7 @@
     min-width: 600px;
     margin: 0 auto 0 auto;
 }
+
+.navLogo {
+    height: 30px;
+}
